manifest/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
  labels:
    app.kubernetes.io/name: todo-app
    app.kubernetes.io/instance: todo-node
    app.kubernetes.io/component: todo
    app.kubernetes.io/version: "0.0.1"
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: service
      targetPort: 8080
  selector:
    app.kubernetes.io/name: todo-app
    app.kubernetes.io/instance: todo-node
    app.kubernetes.io/component: todo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-deployment
  labels:
    app.kubernetes.io/name: todo-app
    app.kubernetes.io/instance: todo-node
    app.kubernetes.io/component: todo
    app.kubernetes.io/version: "0.0.1"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: todo-app
      app.kubernetes.io/instance: todo-node
      app.kubernetes.io/component: todo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: todo-app
        app.kubernetes.io/instance: todo-node
        app.kubernetes.io/component: todo
      annotations:
        sidecar.opentelemetry.io/inject: "true"
    spec:
      containers:
        - name: todoclient
          image: 'hrexed/todoapp-node:0.1'
          imagePullPolicy: Always
          resources:
            limits:
              memory: 120Mi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todolist-app-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: nginx
  rules:
    - host: "todo.IP_TO_REPLACE.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: todo-app-svc
                port:
                  number: 8080
